# CPPLox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: ASTPrinter.cpp  ASTPrinter.h  Driver.cpp  Driver.h  Environment.cpp  Environment.h  Error.cpp  Error.h  Expression.cpp  Expression.h  Interpreter.cpp  Interpreter.h  Lox.cpp  LoxCallable.h  LoxClass.cpp  LoxClass.h  LoxClock.cpp  LoxClock.h  LoxFunction.cpp  LoxFunction.h  LoxInstance.cpp  LoxInstance.h  Object.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  ReturnValue.h  Scanner.cpp  Scanner.h  Statement.cpp  Statement.h  Token.cpp  Token.h  Visitor.h  main.cpp
src/Error/: Error.cpp  Error.h
src/Interpreter/: Interpreter.cpp  Interpreter.h
src/Scanner/: Scanner.cpp  Scanner.h
src/Token/: Token.cpp  Token.h
src/TokenType/: TokenType.h
